testcases/error/invalid_embed_identifier.veryl
module invalid_embed_identifier {}
embed (cocotb) py{{{
    \{ invalid_embed_identifier \}
}}}
